--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -16,6 +16,10 @@ nacos:
 dubbo:
   application:
     name: ${spring.application.name}
+  # 服务消费端配置
+  consumer:
+    # 超时时间，单位：毫秒
+    timeout: 5000
   # 注册中心 采用nacos
   registry:
     address: nacos://${nacos.service-address}:${nacos.port}
