--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,7 @@
             <properties>
                 <profiles.active>dev</profiles.active>
                 <nacos.server>127.0.0.1:8848</nacos.server>
+                <nacos.namespace>f584899c-276b-4385-b6c8-1f0f3699c53c</nacos.namespace>
             </properties>
             <activation>
                 <activeByDefault>true</activeByDefault>
@@ -189,6 +190,7 @@
             <properties>
                 <profiles.active>test</profiles.active>
                 <nacos.server>127.0.0.1:8848</nacos.server>
+                <nacos.namespace>f584899c-276b-4385-b6c8-1f0f3699c53c</nacos.namespace>
             </properties>
         </profile>
         <profile>
@@ -196,6 +198,7 @@
             <properties>
                 <profiles.active>prod</profiles.active>
                 <nacos.server>127.0.0.1:8848</nacos.server>
+                <nacos.namespace>f584899c-276b-4385-b6c8-1f0f3699c53c</nacos.namespace>
             </properties>
         </profile>
     </profiles>
