--- a/dubbo-service/pom.xml
+++ b/dubbo-service/pom.xml
@@ -7,7 +7,7 @@
     <name>dubbo-service</name>
     <description>dubbo in spring-boot service interface</description>
     <parent>
-        <artifactId>dubbo-spring-boot-starter-demo</artifactId>
+        <artifactId>dubbo-cloud</artifactId>
         <groupId>com.teacherblitz</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
