--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.teacherblitz</groupId>
-    <artifactId>dubbo-spring-boot-starter-demo</artifactId>
+    <artifactId>dubbo-cloud</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>provider</module>
@@ -14,7 +14,7 @@
     </modules>
     <packaging>pom</packaging>
 
-    <name>dubbo-spring-boot-starter-demo</name>
+    <name>dubbo-cloud</name>
     <description>dubbo in spring-boot 案例</description>
 
     <properties>
