--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -9,7 +9,7 @@
 
     <parent>
         <groupId>com.teacherblitz</groupId>
-        <artifactId>dubbo-spring-boot-starter-demo</artifactId>
+        <artifactId>dubbo-cloud</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
