nacos配置自动刷新

--- a/provider/src/main/resources/bootstrap.yml
+++ b/provider/src/main/resources/bootstrap.yml
@@ -14,7 +14,8 @@ spring:
         server-addr: ${spring.cloud.nacos.discovery.server-addr}
         namespace: @nacos.namespace@
         file-extension: yml
-        shared-configs:
-          - ${spring.application.name}-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
+        shared-configs[0]:
+          data-id: ${spring.application.name}-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
+          refresh: true
   profiles:
     active: @profiles.active@
