--- a/customer/src/main/resources/bootstrap.yml
+++ b/customer/src/main/resources/bootstrap.yml
@@ -15,7 +15,8 @@ spring:
         server-addr: @nacos.server@
         namespace: @nacos.namespace@
         file-extension: yml
-        shared-configs:
-          - ${spring.application.name}-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
+        shared-configs[0]:
+          data-id: ${spring.application.name}-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
+          refresh: true
   profiles:
     active: @profiles.active@
